--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.534.0",
-    "next": "15.4.2",
+    "next": "^14.2.31",
     "razorpay": "^2.9.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-email": "^4.2.3",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
